# FASTER

./: README.md  pyproject.toml
example/: input.txt
example_out/: NA12878.STR_analysis.json  STR_analysis_report.html  negative_control.STR_analysis.json
src/: variant_catalog.thermofisher_24markers.json
src/faster/: cli.py
src/faster/config/: marker_info.json
src/faster/core/: contamination.py  peak_caller.py
src/faster/models/: data_models.py
src/faster/utils/: plotting.py  report_generator.py  results.py
