[project]
name = "faster"
version = "1.0.0"
description = "Forensic Analysis of STRs with Thermofisher Electrophoresis Result"
authors = [{ name = "Wonjun Lim", email = "cerutx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["forensics", "str", "dna", "analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.13.0",
]

[project.urls]
Repository = "https://github.com/wjlim/FASTER"
Documentation = "https://github.com/wjlim/FASTER#readme"

[project.scripts]
faster = "faster.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faster"]

[tool.hatch.build]
include = [
    "src/faster/**/*.py",
    "src/faster/**/*.json"
]

[tool.ruff]
line-length = 100
target-version = "py310" 